Add: Upadte URL

--- a/AdashimaaTube Legacy.user.css
+++ b/AdashimaaTube Legacy.user.css
@@ -1,10 +1,13 @@
 /* ==UserStyle==
 @name           `AdashimaaTube Legacy
-@author         sapondanaisriwan <sapondanaisriwan@gmail.com> (https://github.com/sapondanaisriwan) [Adashima#4066]
+@author         sapondanaisriwan <sapondanaisriwan@gmail.com> (https://github.com/sapondanaisriwan)
 @description    Please report bugs via github issues or my email (If I have some free time, I'll fix them)
+
 @namespace      https://userstyles.world/user/sapondanaisriwan
 @homepageURL    https://github.com/sapondanaisriwan/AdashimaaTube
 @supportURL     https://github.com/sapondanaisriwan/AdashimaaTube/issues
+@updateURL      https://github.com/sapondanaisriwan/AdashimaaTube/raw/master/AdashimaaTube.user.css
+
 @version        2.0.0
 @license        MIT
 @preprocessor   stylus
@@ -57,7 +60,7 @@
 
 ==/UserStyle== */
 /*
-Please report bugs via my email, github issue and discord(If I have some free time, I'll fix them)
+Please report bugs via my email or github issue(If I have some free time, I'll fix them)
 Contact: sapondanaisriwan@gmail.com
 Support me: https://ko-fi.com/sapondanaisriwan 
 Support me: https://ko-fi.com/sapondanaisriwan
