--- a/AdashimaaTube Legacy.user.css
+++ b/AdashimaaTube Legacy.user.css
@@ -6,7 +6,7 @@
 @namespace      https://userstyles.world/user/sapondanaisriwan
 @homepageURL    https://github.com/sapondanaisriwan/AdashimaaTube
 @supportURL     https://github.com/sapondanaisriwan/AdashimaaTube/issues
-@updateURL      https://github.com/sapondanaisriwan/AdashimaaTube/raw/master/AdashimaaTube%20Legacy.user.css"
+@updateURL      https://github.com/sapondanaisriwan/AdashimaaTube/raw/master/AdashimaaTube%20Legacy.user.css
 
 @version        2.0.0
 @license        MIT
